Fix JDK11 deprecation warnings when building GWT
- Fixes #7776