@@ -38,17 +38,17 @@ public class SelectWidget extends Composite
    {
       this(ExternalLabel);
    }
-   
+
    public SelectWidget(String label)
    {
       this(label, null, false);
    }
-   
+
    public SelectWidget(String label, String[] options)
    {
       this(label, options, false);
    }
-   
+
    public SelectWidget(String label, String[] options, boolean listOnLeft)
    {
       this(label, options, null, false, true, listOnLeft);
@@ -61,7 +61,7 @@ public class SelectWidget extends Composite
    {
       this(label, options, values, isMultipleSelect, false, false);
    }
-   
+
    public SelectWidget(String label,
                        String[] options,
                        String[] values,
@@ -69,7 +69,7 @@ public class SelectWidget extends Composite
                        boolean horizontalLayout,
                        boolean listOnLeft)
    {
-      this(label, options, values, isMultipleSelect, 
+      this(label, options, values, isMultipleSelect,
            horizontalLayout, listOnLeft, false);
    }
 
@@ -105,7 +105,7 @@ public class SelectWidget extends Composite
          for (int i = 0; i < options.length; i++)
             listBox_.addItem(options[i], values[i]);
       }
-      
+
       Panel panel = null;
       if (horizontalLayout)
       {
@@ -147,24 +147,24 @@ public class SelectWidget extends Composite
          panel = flowPanel_;
          panel.add(listBox_);
       }
-      
+
       initWidget(panel);
-      
+
       if (fillContainer)
       {
          if (StringUtil.isNullOrEmpty(label))
             listBox_.setWidth("100%");
          horizontalPanel_.setWidth("100%");
       }
-      
+
       addStyleName(ThemeResources.INSTANCE.themeStyles().selectWidget());
    }
-   
+
    public HandlerRegistration addChangeHandler(ChangeHandler handler)
    {
       return listBox_.addChangeHandler(handler);
    }
-   
+
    public FormLabel getLabel()
    {
       return label_;
@@ -174,36 +174,36 @@ public class SelectWidget extends Composite
    {
       return listBox_;
    }
-   
+
    public void setLabel(String label)
    {
       label_.setText(label);
    }
-   
+
    public void setChoices(String[] options)
    {
       setChoices(options, options);
    }
-   
+
    public void setChoices(String[] options, String[] values)
-   {   
+   {
       listBox_.clear();
       for (int i = 0; i < options.length; i++)
          addChoice(options[i], values[i]);
-      
+
       selectFirstItem();
    }
-   
+
    public void addChoice(String option)
    {
       addChoice(option, option);
    }
-   
+
    public void addChoice(String option, String value)
    {
       listBox_.addItem(option, value);
    }
-   
+
    public void selectFirstItem()
    {
       if (listBox_.getItemCount() > 0)
@@ -242,19 +242,19 @@ public class SelectWidget extends Composite
    {
       return Integer.parseInt(getValue());
    }
-   
+
    public void setIntValue(int value)
    {
-      setValue(new Integer(value).toString());
+      setValue(Integer.valueOf(value).toString());
    }
-   
+
    public void addWidget(Widget widget)
    {
       if (horizontalPanel_ != null)
       {
          horizontalPanel_.add(widget);
          horizontalPanel_.setCellVerticalAlignment(
-               widget, 
+               widget,
                HasVerticalAlignment.ALIGN_MIDDLE);
       }
       else
@@ -267,7 +267,7 @@ public class SelectWidget extends Composite
    {
       listBox_.insertItem(label, value, index);
    }
-   
+
    @Override
    public void setElementId(String id)
    {
